test/fail/enums_and_variants/inherit_enum.lly
#[
SyntaxError: 'Option' cannot be inherited from.
Where: File "inherit_enum.lly" at line 8
]#

enum Option[A] { Some(A) None }

class abc() < Option {
}
